--- a/scripts/config-split/templates/README.md.twig
+++ b/scripts/config-split/templates/README.md.twig
@@ -1,1 +1,1 @@
-This directory contains configuration to be imported into your Drupal site via config_split for the {{ name }} environment. See [configuration management](http://blt.readthedocs.io/en/9.x/readme/configuration-management/) for more information.
+This directory contains configuration to be imported into your Drupal site via config_split for the {{ name }} environment. See [configuration management](http://blt.readthedocs.io/en/latest/readme/configuration-management/) for more information.
