Fixed config split template needs description field.

--- a/scripts/config-split/templates/config_split.config_split.env.yml.twig
+++ b/scripts/config-split/templates/config_split.config_split.env.yml.twig
@@ -4,6 +4,7 @@ status: true
 dependencies: {  }
 id: {{ id }}
 label: {{ name }}
+description: ''
 folder: ../config/envs/{{ id }}
 module: {  }
 theme: {  }
